--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-echo '<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="refresh" content="0; url=https://boatneck-weeder-7b7.notion.site/BraiDyn-BC-Database-1e972fb17ad1470b911aa108fb8c0713?pvs=4">
@@ -7,4 +7,4 @@ echo '<!DOCTYPE html>
 <body>
     <p>If you are not redirected automatically, follow this <a href="https://boatneck-weeder-7b7.notion.site/BraiDyn-BC-Database-1e972fb17ad1470b911aa108fb8c0713?pvs=4">link to the BraiDyn BC Database</a>.</p>
 </body>
-</html>' > index.html
+</html>
