--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=https://boatneck-weeder-7b7.notion.site/BraiDyn-BC-Database-1e972fb17ad1470b911aa108fb8c0713?pvs=4">
+    <meta http-equiv="refresh" content="0; url=https://www.notion.so/BraiDyn-BC-Database-303cf08c89f94d81bb2eaed4c3c50345">
     <title>Redirecting...</title>
 </head>
 <body>
